===============================================================================
H323plus 1.26.0 - 1.26.x
===============================================================================
BUG H.239 Support both presentation and live modes
BUG Better handle TCP connection timeout or non H.323 messages sent to listener port, 
NEW H323EndPoint::H46023NatMethodSelection to better co-ordinate when to use NAT method. 
BUG fixes to H.460.17 especially when using TLS transport. 
NEW AEC Implementation using fixed size ring buffer (1.26.2)
BUG correct possible memory corruption when creating silence frame
BUG ensure empty DH tokens are not created if not supported due to keylength setting
Added H323Connection::EnableCallMediaEncryption() is allow encryption to be disabled on a call-by-call basis
new switch H323_JITTER_ANALYSER and disabled jitter buffer logging by default.
BUG fixes for encyption support in H323_ExternalRTPChannel
Added H460.25 Location information support (req Expat support in PTLIB) (1.26.1)

===============================================================================
H323plus 1.25.0 - 1.25.5
===============================================================================
Added H323_MEDIAENCODED compile directive to support external media decode/encode
Added Encryption support to the H.224 Channel and H323_ExternalRTPChannel
Performance Memory management Improvement in audio/video processing.
Updated to compile with PTLIB Head (1.25.5)
Added Language assignment and routing support
Added TLS signalling support
Added DH6144 and DH8192 H.235 Support (support for keylength up to 8192 bits)
Added H.460.22 Support
Added vs2012 Build environment
Fixed vs2010 Build environment
Added H.461 Asset Support. (1.25.4)
Update and fixes for H.460.26 (1.25.3)
Update Presence System to Version 3. (1.25.2)
Update Alternate and Assigned Gatekeeper code. Removing buggy pointers
Added H.224 Factory loader moved to H224 subdirectory
Added T.140 Support